assets/styles/tw.css
/* ... */
.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-around {
  justify-content: space-around;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.bg-main-sub {
  --tw-bg-opacity: 1;
  background-color: rgb(197 236 255 / var(--tw-bg-opacity));
}

.\!p-2 {
  padding: 0.5rem !important;
}

.p-2 {
  padding: 0.5rem;
}

.p-4 {
  padding: 1rem;
}

.p-6 {
  padding: 1.5rem;
}

.py-2 {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.text-sm {
  font-size: 0.875rem;
  line-height: 1.25rem;
}

.text-lg {
  font-size: 1.125rem;
  line-height: 1.75rem;
}

.text-xs {
  font-size: 0.75rem;
  line-height: 1rem;
}

.font-bold {
  font-weight: 700;
}

.text-accent {
  --tw-text-opacity: 1;
  color: rgb(240 238 112 / var(--tw-text-opacity));
}

@media (min-width: 768px) {
  .md\:my-0 {
    margin-top: 0px;
    margin-bottom: 0px;
  }

  .md\:ml-0 {
    margin-left: 0px;
  }

  .md\:ml-4 {
    margin-left: 1rem;
  }

  .md\:mb-0 {
    margin-bottom: 0px;
  }

  .md\:block {
    display: block;
  }

  .md\:flex {
    display: flex;
  }

  .md\:hidden {
    display: none;
  }

  .md\:w-1\/3 {
    width: 33.333333%;
  }

  .md\:w-1\/2 {
    width: 50%;
  }

  .md\:justify-start {
    justify-content: flex-start;
  }

  .md\:p-4 {
    padding: 1rem;
  }

  .md\:text-center {
    text-align: center;
  }

  .md\:text-sm {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

